Fix Path.of - and remove obsolete method